src/components/headers_overlay/headers_overlay.css
.o-spreadsheet {
  .o-col-resizer {
    position: absolute;
    top: 0;
    left: var(--os-header-width);
    right: var(--os-scrollbar-width);
    height: var(--os-header-height);
    width: calc(100% - var(--os-header-width) + var(--os-scrollbar-width));
    &.o-dragging {
      cursor: grabbing;
    }
    &.o-grab {
      cursor: grab;
    }
    .dragging-col-line {
      top: var(--os-header-height);
      position: absolute;
      width: 2px;
      height: 10000px;
      background-color: black;
    }
    .dragging-col-shadow {
      top: var(--os-header-height);
      position: absolute;
      height: 10000px;
      background-color: black;
      opacity: 0.1;
    }
    .o-handle {
      position: absolute;
      height: var(--os-header-height);
      width: 4px;
      cursor: e-resize;
      background-color: var(--os-selection-border-color);
    }
    .dragging-resizer {
      top: var(--os-header-height);
      position: absolute;
      margin-left: 2px;
      width: 1px;
      height: 10000px;
      background-color: var(--os-selection-border-color);
    }
    .o-unhide:hover {
      z-index: calc(var(--os-components-importance-grid) + 1);
      background-color: var(--os-gray-400);
    }
  }

  .o-row-resizer {
    position: absolute;
    top: var(--os-header-height);
    left: 0;
    bottom: var(--os-scrollbar-width);
    width: var(--os-header-width);
    &.o-dragging {
      cursor: grabbing;
    }
    &.o-grab {
      cursor: grab;
    }
    .dragging-row-line {
      left: var(--os-header-width);
      position: absolute;
      width: 10000px;
      height: 2px;
      background-color: black;
    }
    .dragging-row-shadow {
      left: var(--os-header-width);
      position: absolute;
      width: 10000px;
      background-color: black;
      opacity: 0.1;
    }
    .o-handle {
      position: absolute;
      height: 4px;
      width: var(--os-header-width);
      cursor: n-resize;
      background-color: var(--os-selection-border-color);
    }
    .dragging-resizer {
      left: var(--os-header-width);
      position: absolute;
      margin-top: 2px;
      width: 10000px;
      height: 1px;
      background-color: var(--os-selection-border-color);
    }
    .o-unhide:hover {
      z-index: calc(var(--os-components-importance-grid) + 1);
      background-color: var(--os-gray-400);
    }
  }

  .o-overlay {
    .all {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      width: var(--os-header-width);
      height: var(--os-header-height);
    }
  }
}

